# teologIA

./: AGENTES.md  OBJETIVO.md  PROMPT_LEGADO.md  PROMPT_OTIMIZADO.md  README.md  ROADMAP.md  VISAO.md
backend/: .env-developer  .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/.github/: copilot-instructions.md
frontend/src/: App.vue  api.ts  style.css
