[package]
name = "teologia_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Novas dependências:
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
dotenvy = "0.15"
reqwest = { version = "0.13.2", features = ["json"] }
tower-http = { version = "0.6.8", features = ["cors"] }
